# fao-identify-middleware

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
examples/: api.js  fastapi_cookie_session.py  integration.py  main.py  nginx.config  oidc_integration.py
middleware/: database_backend.py  flask_identify.py  identify.py  models.py  validators.py
src/identify_middleware/: __init__.py
src/identify_middleware/fastapi_middleware/: __init__.py  fastapi_identify.py  tools.py
src/identify_middleware/fastapi_middleware/tests/: test_identity.py
src/identify_middleware/flask_middleware/: __init__.py  flask_identify.py  tools.py
src/identify_middleware/shared/: database_backend.py  jwt_utils.py  keycloak.py  models.py  oidc.py  validators.py
tests/: __init__.py  test_identity.py  test_jwt_utils.py
utils/: __init__.py  jwt_utils.py
